--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MoneyTracking</string>
+    <string name="app_name">Money Tracking</string>
     <string name="btn_addExpensive">Добавить</string>
     <string name="labelExpensiveInputText">Введите сумму расходов</string>
     <string name="textView_textExpensive">Расход за все время: </string>
