--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="text_field_sum_expense_label">Введите сумму расхода</string>
     <string name="text_all_expense">Расход за все время:</string>
     <string name="title"><![CDATA[<h3>Расход за все время:</h3>]]></string>
+    <string name="type_operation_expense">Расход</string>
 </resources>
