--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Money Tracking</string>
-    <!--Money Track Fragment  -->
+    <!--Add Expenses Fragment  -->
     <string name="btn_add_expensive">Добавить</string>
     <string name="drop_down_menu_label">Выберите категорию</string>
     <string name="text_field_sum_expense_label">Введите сумму расхода</string>
@@ -21,4 +21,7 @@
     <string name="total_amount_year">Сумма расходов за год:</string>
     <string name="total_amount_startPeriod">Сумма расхода от</string>
     <string name="total_amount_EndPeriod">по</string>
+
+    <!--Update Expenses Fragment-->
+    <string name="btn_update_expensive">Обновить</string>
 </resources>
